refactor: replace deprecated URL constructor